--- a/chitetsanpham-quanlycomment/chitietsanpham/index.html
+++ b/chitetsanpham-quanlycomment/chitietsanpham/index.html
@@ -40,25 +40,57 @@
       </div>
 
       <div class="product-details">
-        <h2>Iphone 9</h2>
-        <p class="total-price">25,990,000 VND</p>
-        <p class="product-description">
-          Sản Phẩm với thiết kế sang trọng, màn hình tràn viền, camera sắc nét và hiệu năng mạnh mẽ.
-          Chạy trên hệ điều hành IOS mới nhất, mượt mà, hỗ trợ đầy đủ các ứng dụng và tiện ích. Đây là sự lựa chọn lý
-          tưởng
-          cho những ai yêu thích công nghệ và cần một chiếc điện thoại đáng tin cậy.
-        </p>
-        <div class="quantity-selection">
-          <p>Chọn số lượng:</p>
-          <div class="quantity-controls">
-            <button id="decrease-btn">-</button>
-            <span id="quantity-value">1</span>
-            <button id="increase-btn">+</button>
+            <h2>Iphone 16 Promax</h2>
+            
+            <p class="product-description">
+                Sản Phẩm với thiết kế sang trọng, màn hình tràn viền, camera sắc nét, IOS mượt mà và hiệu năng mạnh mẽ.
+            </p>
+            <div class="container">
+              <h2 class="title">Cấu hình & Bộ nhớ</h2>
+              <div class="specs">
+                  <div class="spec-item">
+                      <span class="label">Hệ điều hành:</span>
+                      <span class="value">iOS 18</span>
+                  </div>
+                  <div class="spec-item">
+                      <span class="label">Chip xử lý (CPU):</span>
+                      <span class="value">Apple A18 Pro 6 nhân</span>
+                  </div>
+                  <div class="spec-item">
+                      <span class="label">Dung lượng pin - Tốc độ sạc:</span>
+                      <span class="value">4.400 mAh - 27 W </span>
+                  </div>
+                  <div class="spec-item">
+                      <span class="label">Chip đồ họa (GPU):</span>
+                      <span class="value">Apple GPU 6 nhân</span>
+                  </div>
+                  <div class="spec-item">
+                      <span class="label">RAM:</span>
+                      <span class="value">8 GB</span>
+                  </div>
+                  <div class="spec-item">
+                      <span class="label">Dung lượng lưu trữ:</span>
+                      <span class="value">128 GB</span>
+                  </div>
+                  <div class="spec-item">
+                      <span class="label">Màn Hình:</span>
+                      <span class="value">6.3 inch - 120 hz</span>
+                  </div>
+                  
+              </div>
           </div>
+          <p class="total-price">25.990.000 VND</p>
+            <div class="quantity-selection">
+                <p>Chọn số lượng:</p>
+                <div class="quantity-controls">
+                  <button id="decrease-btn">-</button>
+                  <span id="quantity-value">1</span>
+                  <button id="increase-btn">+</button>
+                </div>
+              </div>
+            <button class="add-to-cart">Thêm vào giỏ hàng</button>
+            <button class="buy-now">Mua ngay</button>
         </div>
-        <button class="add-to-cart">Thêm vào giỏ hàng</button>
-        <button class="buy-now">Mua ngay</button>
-      </div>
     </div>
 
     <div class="reviews">
